<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutAppFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/grader_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:text="@string/app_name"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_logo" />


        <View
            android:id="@+id/about_horizontal_bar"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_app_name_text" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/about_autor_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            app:cardCornerRadius="12dp"
            app:contentPadding="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_horizontal_bar"
            app:cardElevation="0dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/about_autor_card_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/about_autor_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/person_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/orange" />


                <TextView
                    android:id="@+id/about_autor_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/autor_aplikacije_text"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintStart_toEndOf="@id/about_autor_icon"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/autor_aplikacije"
                    app:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toEndOf="@id/about_autor_icon"
                    app:layout_constraintTop_toBottomOf="@id/about_autor_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/about_version_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="12dp"
            app:contentPadding="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_autor_card"
            app:cardElevation="0dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/about_version_card_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/about_version_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/phone_settings_version_icon"
                    app:layout_constraintBottom_toTopOf="@id/about_version_changelog_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorAccent" />


                <TextView
                    android:id="@+id/about_version_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/verzija_aplikacije_text"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintStart_toEndOf="@id/about_version_icon"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/about_version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/verzija_aplikacije"
                    app:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toEndOf="@id/about_version_icon"
                    app:layout_constraintTop_toBottomOf="@id/about_version_title" />


                <!-- Klikom na verziju card otvara se changelog tekst ispod -->
                <TextView
                    android:id="@+id/about_version_changelog_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/verzija_aplikacije_changelog"
                    android:visibility="gone"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_version_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/about_update_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            app:cardCornerRadius="12dp"
            app:contentPadding="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_version_card"
            app:cardElevation="0dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/about_update_card_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/about_update_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/date_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/darkBlue" />


                <TextView
                    android:id="@+id/about_update_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/datum_azuriranja_text"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintStart_toEndOf="@id/about_update_icon"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/datum_azuriranja_datum"
                    app:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toEndOf="@id/about_update_icon"
                    app:layout_constraintTop_toBottomOf="@id/about_update_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/about_play_store_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            app:cardCornerRadius="12dp"
            app:contentPadding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_update_card"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/stroke_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/about_play_store_card_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/about_play_store_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/play_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="Play prodavnica"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_play_store_icon" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>