<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PrijaviGreskuFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/bug_report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/prijavite_gresku_text"
            app:fontFamily="@font/manrope_bold"
            android:textSize="22sp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bug_report_banner_card"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/bug_report_banner_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bug_report_title">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/red">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/bug_icon"
                    app:tint="#fff" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bug_report_input_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="6dp"
            app:contentPadding="6dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/stroke_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bug_report_banner_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bug_report_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bug_report_hint_text"
                    app:boxStrokeErrorColor="@color/red"
                    app:boxCornerRadiusTopStart="6dp"
                    app:boxCornerRadiusBottomEnd="6dp"
                    app:boxCornerRadiusBottomStart="6dp"
                    app:boxCornerRadiusTopEnd="6dp"
                    app:counterMaxLength="240"
                    app:counterEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bug_report_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="240"
                        android:singleLine="false"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bug_report_send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/prijavi_text"
            android:enabled="false"
            android:fontFamily="@font/manrope_bold"
            app:layout_constraintTop_toBottomOf="@id/bug_report_input_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/send_arrow"
            app:iconSize="24dp"/>


        <TextView
            android:id="@+id/bug_report_napomena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bug_report_napomena_text"
            android:textSize="14sp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/manrope_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bug_report_send_btn" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>